--- a/nous-connaitre.html
+++ b/nous-connaitre.html
@@ -263,24 +263,24 @@
           <p>Nous défendons les principes fondamentaux du syndicalisme :</p>
           <div class="valeurs-container">
             <div class="valeur">
-              <i class="fa-solid fa-scale-balanced"></i>
+              <i class="fa-solid fa-handshake-angle"></i>
               <h3>Solidarité</h3>
               <p>
                 Unir tous les acteurs du transport pour une force collective.
               </p>
             </div>
             <div class="valeur">
-              <i class="fa-solid fa-chalkboard-user"></i>
+              <i class="fa-solid fa-gavel"></i>
               <h3>Justice sociale</h3>
               <p>Garantir l'équité dans le traitement des travailleurs.</p>
             </div>
             <div class="valeur">
-              <i class="fa-solid fa-people-group"></i>
+              <i class="fa-solid fa-eye"></i>
               <h3>Transparence</h3>
               <p>Agir avec clarté et honnêteté dans toutes nos actions.</p>
             </div>
             <div class="valeur">
-              <i class="fa-regular fa-thumbs-up"></i>
+              <i class="fa-solid fa-group-arrows-rotate"></i>
               <h3>Engagement</h3>
               <p>Défendre chaque adhérent avec détermination.</p>
             </div>
