--- a/vos-droits.html
+++ b/vos-droits.html
@@ -167,94 +167,131 @@
         </div>
       </section>
 
-      <section id="droit-adherent" class="section">
-        <div class="content">
+      <section id="droits-adherent" class="section">
+        <div class="droits-div">
           <h2>Vos droits en tant qu'adhérent</h2>
           <p>En rejoignant FO Transport 13, vous bénéficiez :</p>
-          <ul>
-            <li>
-              D’une représentation active face à votre employeur et aux
-              institutions.
-            </li>
-            <li>
-              D’une assistance personnalisée pour toute question liée à vos
-              conditions de travail.
-            </li>
-            <li>
-              D’un accès à des formations syndicales pour mieux comprendre et
-              défendre vos droits.
-            </li>
-            <li>
-              De conseils juridiques adaptés à votre situation professionnelle.
-            </li>
-          </ul>
+
+          <div class="droits-container">
+            <div class="droit">
+              <p>
+                D’une représentation active face à votre employeur et aux
+                institutions.
+              </p>
+            </div>
+            <div class="droit">
+              <p>
+                D’une assistance personnalisée pour toute question liée à vos
+                conditions de travail.
+              </p>
+            </div>
+
+            <div class="droit">
+              <p>
+                D’un accès à des formations syndicales pour mieux comprendre et
+                défendre vos droits.
+              </p>
+            </div>
+            <div class="droit">
+              <p>
+                De conseils juridiques adaptés à votre situation
+                professionnelle.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
 
       <section id="protection-juridique" class="section">
-        <div class="content">
+        <div>
           <h2>Votre protection juridique</h2>
           <p>
             FO Transport 13 met à votre disposition une protection juridique
             complète, incluant :
           </p>
-          <ul>
-            <li>L’accompagnement en cas de litige avec votre employeur.</li>
-            <li>
-              L’accès à des juristes spécialisés dans le droit du travail.
-            </li>
-            <li>
-              Le soutien lors de démarches auprès des institutions sociales
-              (CPAM, URSSAF, etc.).
-            </li>
-          </ul>
+          <div class="protection-container">
+            <div class="protection">
+              <i class="fa-solid fa-users"></i>
+              <h3>Accompagnement</h3>
+              <p>Un accompagnement en cas de litige avec votre employeur.</p>
+            </div>
+            <div class="protection">
+              <i class="fa-solid fa-user-tie"></i>
+              <h3>Spécialistes</h3>
+              <p>
+                L’accès à des juristes spécialisés dans le droit du travail.
+              </p>
+            </div>
+            <div class="protection">
+              <i class="fa-solid fa-handshake-angle"></i>
+              <h3>Soutien</h3>
+              <p>
+                Le soutien lors de démarches auprès des institutions sociales
+                (CPAM, URSSAF, etc.).
+              </p>
+            </div>
+          </div>
         </div>
       </section>
 
       <section id="formation-syndicale" class="section">
-        <div class="content">
+        <div class="formation-div">
           <h2>Formations et outils pour mieux vous défendre</h2>
           <p>
             Nous croyons en l’importance de vous donner les clés pour comprendre
             vos droits. En tant qu’adhérent, vous pourrez participer à des
             formations sur des thématiques variées, telles que :
           </p>
-          <ul>
-            <li>Le rôle des représentants du personnel au sein du CSE.</li>
-            <li>
-              Les bases du droit du travail pour vous défendre efficacement.
-            </li>
-            <li>
-              Les négociations collectives et l’établissement d’accords locaux.
-            </li>
-          </ul>
+          <div class="formation-container">
+            <div class="formation-item">
+              <i class="fa-solid fa-1"></i>
+              <p>Le rôle des représentants du personnel au sein du CSE.</p>
+            </div>
+            <div class="formation-item">
+              <i class="fa-solid fa-2"></i>
+              <p>
+                Les bases du droit du travail pour vous défendre efficacement.
+              </p>
+            </div>
+            <div class="formation-item">
+              <i class="fa-solid fa-3"></i>
+              <p>
+                Les négociations collectives et l’établissement d’accords
+                locaux.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
 
       <section id="soutien-specifique" class="section">
-        <div class="content">
+        <div>
           <h2>Un soutien adapté à chaque situation</h2>
           <p>
             Que vous soyez salarié(e), représentant(e) du personnel, ou
             mandaté(e) pour des missions syndicales, FO Transport 13 vous offre
             un accompagnement spécifique selon votre rôle :
           </p>
-          <ul>
-            <li>
-              <strong>Salarié(e) :</strong> Conseils pour défendre vos droits
-              individuels.
-            </li>
-            <li>
-              <strong>Élu(e) :</strong> Soutien pour vos responsabilités au sein
-              du CSE.
-            </li>
-            <li>
-              <strong>Mandaté(e) :</strong> Aide dans vos missions de
-              négociation et de représentation.
-            </li>
-          </ul>
+          <div class="soutien-container">
+            <div class="soutien">
+              <i class="fa-solid fa-people-roof"></i>
+              <h3>Salarié(e)</h3>
+              <p>Conseils pour défendre vos droits individuels.</p>
+            </div>
+            <div class="soutien">
+              <i class="fa-solid fa-user-tie"></i>
+              <h3>Élu(e)</h3>
+              <p>Soutien pour vos responsabilités au sein du CSE.</p>
+            </div>
+            <div class="soutien">
+              <i class="fa-solid fa-people-group"></i>
+              <h3>Mandaté(e)</h3>
+              <p>Aide dans vos missions de négociation et de représentation.</p>
+            </div>
+          </div>
         </div>
       </section>
+
       <section class="cta">
         <div class="overlay">
           <h2>
