--- a/je-suis-elu-e-au-cse.html
+++ b/je-suis-elu-e-au-cse.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Vos droits | FO Transport 13 - Votre syndicat Force Ouvrière dans le
-      domaine du transport à Marseille
+      Je suis élu(e) au CSE | FO Transport 13 - Votre syndicat Force Ouvrière
+      dans le domaine du transport à Marseille
     </title>
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
@@ -17,7 +17,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body id="vos-droits">
+  <body id="pages-droits">
     <header>
       <div class="barre-sup">
         <div class="menu-barre-sup">
@@ -158,145 +158,10 @@
     <main>
       <section id="title-page">
         <div class="title-container">
-          <h1>Vos droits</h1>
+          <h1>Je suis élu(e) au CSE</h1>
         </div>
       </section>
-      <section class="intro section">
-        <div class="content">
-          <p>
-            En tant qu'adhérent ou futur adhérent de FO Transport 13, vous avez
-            accès à un ensemble de droits et de protections spécifiques. Notre
-            mission est de défendre vos intérêts, vous informer sur vos droits
-            et vous accompagner dans toutes vos démarches liées à votre vie
-            professionnelle dans le secteur du transport et de la logistique.
-          </p>
-        </div>
-      </section>
-
-      <section id="droits-adherent" class="section">
-        <div class="droits-div">
-          <h2>Vos droits en tant qu'adhérent</h2>
-          <p>En rejoignant FO Transport 13, vous bénéficiez :</p>
-
-          <div class="droits-container">
-            <div class="droit">
-              <p>
-                D’une représentation active face à votre employeur et aux
-                institutions.
-              </p>
-            </div>
-            <div class="droit">
-              <p>
-                D’une assistance personnalisée pour toute question liée à vos
-                conditions de travail.
-              </p>
-            </div>
-
-            <div class="droit">
-              <p>
-                D’un accès à des formations syndicales pour mieux comprendre et
-                défendre vos droits.
-              </p>
-            </div>
-            <div class="droit">
-              <p>
-                De conseils juridiques adaptés à votre situation
-                professionnelle.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="protection-juridique" class="section">
-        <div>
-          <h2>Votre protection juridique</h2>
-          <p>
-            FO Transport 13 met à votre disposition une protection juridique
-            complète, incluant :
-          </p>
-          <div class="protection-container">
-            <div class="protection">
-              <i class="fa-solid fa-users"></i>
-              <h3>Accompagnement</h3>
-              <p>Un accompagnement en cas de litige avec votre employeur.</p>
-            </div>
-            <div class="protection">
-              <i class="fa-solid fa-user-tie"></i>
-              <h3>Spécialistes</h3>
-              <p>
-                L’accès à des juristes spécialisés dans le droit du travail.
-              </p>
-            </div>
-            <div class="protection">
-              <i class="fa-solid fa-handshake-angle"></i>
-              <h3>Soutien</h3>
-              <p>
-                Le soutien lors de démarches auprès des institutions sociales
-                (CPAM, URSSAF, etc.).
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="formation-syndicale" class="section">
-        <div class="formation-div">
-          <h2>Formations et outils pour mieux vous défendre</h2>
-          <p>
-            Nous croyons en l’importance de vous donner les clés pour comprendre
-            vos droits. En tant qu’adhérent, vous pourrez participer à des
-            formations sur des thématiques variées, telles que :
-          </p>
-          <div class="formation-container">
-            <div class="formation-item">
-              <i class="fa-solid fa-1"></i>
-              <p>Le rôle des représentants du personnel au sein du CSE.</p>
-            </div>
-            <div class="formation-item">
-              <i class="fa-solid fa-2"></i>
-              <p>
-                Les bases du droit du travail pour vous défendre efficacement.
-              </p>
-            </div>
-            <div class="formation-item">
-              <i class="fa-solid fa-3"></i>
-              <p>
-                Les négociations collectives et l’établissement d’accords
-                locaux.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="soutien-specifique" class="section">
-        <div>
-          <h2>Un soutien adapté à chaque situation</h2>
-          <p>
-            Que vous soyez salarié(e), représentant(e) du personnel, ou
-            mandaté(e) pour des missions syndicales, FO Transport 13 vous offre
-            un accompagnement spécifique selon votre rôle :
-          </p>
-          <div class="soutien-container">
-            <div class="soutien">
-              <i class="fa-solid fa-people-roof"></i>
-              <h3>Salarié(e)</h3>
-              <p>Conseils pour défendre vos droits individuels.</p>
-            </div>
-            <div class="soutien">
-              <i class="fa-solid fa-user-tie"></i>
-              <h3>Élu(e)</h3>
-              <p>Soutien pour vos responsabilités au sein du CSE.</p>
-            </div>
-            <div class="soutien">
-              <i class="fa-solid fa-people-group"></i>
-              <h3>Mandaté(e)</h3>
-              <p>Aide dans vos missions de négociation et de représentation.</p>
-            </div>
-          </div>
-        </div>
-      </section>
+      <section class="section"></section>
 
       <section class="cta">
         <div class="overlay">
