--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                 >
                   <ul>
                     <li>
+                      <a href="./nous-connaitre.html">Nous connaître</a>
+                    </li>
+                    <li>
                       <a href="./nous-connaitre.html#qui-sommes-nous"
                         >Qui sommes-nous ?</a
                       >
@@ -92,23 +95,26 @@
                 >
                   <ul>
                     <li>
-                      <a href="./vos-droits.html#avantages"
+                      <a href="./vos-droits.html">Vos droits</a>
+                    </li>
+                    <li>
+                      <a href="./les-avantages-de-mon-adhesion.html"
                         >Les avantages de mon adhésion</a
                       >
                     </li>
                     <li>
-                      <a href="./vos-droits.html#elu-au-cse"
+                      <a href="./je-suis-elu-e-au-cse.html"
                         >Je suis élu(e) au CSE</a
                       >
                     </li>
                     <li>
-                      <a href="./vos-droits.html#mandate-par-mon-syndicat"
+                      <a href="./je-suis-mandate-e-par-mon-syndicat.html"
                         >Je suis mandaté(e) par mon syndicat</a
                       >
                     </li>
                     <li>
                       <a
-                        href="./vos-droits.html#mandate-par-mon-union-departementale"
+                        href="./je-suis-mandate-e-par-mon-union-departementale.html"
                         >Je suis mandaté(e) par mon Union Départementale</a
                       >
                     </li>
