--- a/faq.html
+++ b/faq.html
@@ -319,8 +319,8 @@
                 Vous trouverez une carte vous permettant de voir l'itinéraire à
                 la page "<a href="./nous-contacter.html">Nous contacter</a>".
                 <br /><br />
-                Nous vous accueillons du lundi au vendredi, de 09h00 à 12h00 et
-                de 14h00 à 17h00.
+                Nous vous accueillons lors des permanences du lundi et du
+                vendredi, de 09h00 à 12h00 et de 15h00 à 19h00.
                 <br /><br />
                 Vous pouvez également nous contacter par téléphone au :
                 <a href="tel:0491340034">04.91.34.00.34 </a> ou email à :
