--- a/bulletin-adhesion-juridique.html
+++ b/bulletin-adhesion-juridique.html
@@ -7,6 +7,57 @@
       Bulletin d'adhésion juridique | FO Transport 13 - Votre syndicat Force
       Ouvrière dans le domaine du transport à Marseille
     </title>
+    <!--  -->
+    <meta
+      name="description"
+      content="Rejoignez FO Transport 13 en tant qu'adhérent juridique et bénéficiez d'un accompagnement sur mesure pour défendre vos droits dans le secteur du transport et de la logistique."
+    />
+    <meta
+      name="keywords"
+      content="FO Transport 13, adhésion juridique transport, syndicat transport Marseille, syndicat logistique Marseille, Force Ouvrière transport, droits travailleurs transport, aide juridique transport"
+    />
+    <meta name="author" content="Webilys" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta
+      property="og:title"
+      content="Bulletin d'adhésion juridique | FO Transport 13"
+    />
+    <meta
+      property="og:description"
+      content="Adhérez dès aujourd'hui avec FO Transport 13 et accédez à un accompagnement juridique personnalisé pour défendre vos droits dans le secteur du transport et de la logistique."
+    />
+    <meta property="og:image" content="./assets/img/hero.webp" />
+    <meta
+      property="og:url"
+      content="https://fo-transport13.fr/bulletin-adhesion-juridique"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="fr_FR" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Bulletin d'adhésion juridique | FO Transport 13"
+    />
+    <meta
+      name="twitter:description"
+      content="Rejoignez FO Transport 13 pour un accompagnement juridique personnalisé. Défendez vos droits en tant que professionnel du transport et de la logistique."
+    />
+    <meta
+      name="twitter:image"
+      content="https://fo-transport13.fr/assets/img/hero.webp"
+    />
+
+    <!-- Additional Metadata -->
+    <link
+      rel="canonical"
+      href="https://fo-transport13.fr/bulletin-adhesion-juridique"
+    />
+
+    <!--  -->
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
     <link
