--- a/bulletin-adhesion-simple.html
+++ b/bulletin-adhesion-simple.html
@@ -7,6 +7,57 @@
       Bulletin d'adhésion simple | FO Transport 13 - Votre syndicat Force
       Ouvrière dans le domaine du transport à Marseille
     </title>
+    <!--  -->
+    <meta
+      name="description"
+      content="Rejoignez FO Transport 13 avec une adhésion simple et bénéficiez de nos services dédiés aux travailleurs du transport et de la logistique. Engagez-vous à nos côtés dès aujourd'hui."
+    />
+    <meta
+      name="keywords"
+      content="FO Transport 13, adhésion simple transport, syndicat transport Marseille, syndicat logistique Marseille, Force Ouvrière transport, droits travailleurs transport, engagement syndical"
+    />
+    <meta name="author" content="Webilys" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta
+      property="og:title"
+      content="Bulletin d'adhésion simple | FO Transport 13"
+    />
+    <meta
+      property="og:description"
+      content="Adhérez dès maintenant avec FO Transport 13 et rejoignez une communauté engagée pour défendre vos droits dans le secteur du transport et de la logistique."
+    />
+    <meta property="og:image" content="./assets/img/hero.webp" />
+    <meta
+      property="og:url"
+      content="https://fo-transport13.fr/bulletin-adhesion-simple"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="fr_FR" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Bulletin d'adhésion simple | FO Transport 13"
+    />
+    <meta
+      name="twitter:description"
+      content="Rejoignez FO Transport 13 en adhérant simplement et accédez à un réseau d'entraide et d'accompagnement pour défendre vos droits."
+    />
+    <meta
+      name="twitter:image"
+      content="https://fo-transport13.fr/assets/img/hero.webp"
+    />
+
+    <!-- Additional Metadata -->
+    <link
+      rel="canonical"
+      href="https://fo-transport13.fr/bulletin-adhesion-simple"
+    />
+
+    <!--  -->
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
     <link
