--- a/index.html
+++ b/index.html
@@ -5,8 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       FO Transport 13 - Votre syndicat Force Ouvrière dans le domaine du
-      transport à Marseille
+      transport et de la logistique à Marseille
     </title>
+    <meta
+      name="description"
+      content="Rejoignez FO Transport 13, le syndicat Force Ouvrière dédié aux professionnels du transport et de la logistique à Marseille. Défendez vos droits et bénéficiez d'un soutien personnalisé."
+    />
+    <meta
+      name="keywords"
+      content="FO Transport 13, syndicat transport Marseille, syndicat logistique Marseille, Force Ouvrière transport, droits travailleurs transport, adhésion syndicale transport"
+    />
+    <meta name="author" content="Webilys" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta
+      property="og:title"
+      content="FO Transport 13 - Votre syndicat Force Ouvrière dans le domaine du
+  transport et de la logistique à Marseille"
+    />
+    <meta
+      property="og:description"
+      content="Rejoignez FO Transport 13 pour défendre vos droits en tant que travailleur du transport et de la logistique. Adhérez dès aujourd'hui pour un accompagnement personnalisé."
+    />
+    <meta property="og:image" content="./assets/img/hero.webp" />
+    <meta property="og:url" content="https://fo-transport13.fr" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="fr_FR" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="FO Transport 13 - Syndicat Force Ouvrière du Transport à Marseille"
+    />
+    <meta
+      name="twitter:description"
+      content="Travailleurs du transport à Marseille, FO Transport 13 est là pour vous. Découvrez vos droits et bénéficiez de notre expertise juridique et syndicale."
+    />
+    <meta
+      name="twitter:image"
+      content="https://fo-transport13.fr/assets/img/hero.webp"
+    />
+
+    <!-- Additional Metadata -->
+    <link rel="canonical" href="https://fo-transport13.fr" />
+
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
 
