--- a/bulletin-adhesion-simple.html
+++ b/bulletin-adhesion-simple.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       Bulletin d'adhésion simple | FO Transport 13 - Votre syndicat Force
-      Ouvrière dans le domaine du transport à Marseille
+      Ouvrière dans le domaine du transport et de la logistique à Marseille
     </title>
     <!--  -->
     <meta
