--- a/je-suis-mandate-e-par-mon-union-departementale.html
+++ b/je-suis-mandate-e-par-mon-union-departementale.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       Je suis mandaté(e) par mon Union Départementale | FO Transport 13 - Votre
-      syndicat Force Ouvrière dans le domaine du transport à Marseille
+      syndicat Force Ouvrière dans le domaine du transport et de la logistique à
+      Marseille
     </title>
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
