--- a/les-avantages-de-mon-adhesion.html
+++ b/les-avantages-de-mon-adhesion.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       Les avantages de mon adhésion | FO Transport 13 - Votre syndicat Force
-      Ouvrière dans le domaine du transport à Marseille
+      Ouvrière dans le domaine du transport et de la logistique à Marseille
     </title>
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
