--- a/vos-droits.html
+++ b/vos-droits.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       Vos droits | FO Transport 13 - Votre syndicat Force Ouvrière dans le
-      domaine du transport à Marseille
+      domaine du transport et de la logistique à Marseille
     </title>
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
