--- a/bulletin-adhesion-simple.html
+++ b/bulletin-adhesion-simple.html
@@ -28,7 +28,11 @@
       property="og:description"
       content="Adhérez dès maintenant avec FO Transport 13 et rejoignez une communauté engagée pour défendre vos droits dans le secteur du transport et de la logistique."
     />
-    <meta property="og:image" content="./assets/img/hero.webp" />
+    <meta
+      property="og:image"
+      content="https://fo-transport13.fr/assets/img/hero.webp"
+    />
+
     <meta
       property="og:url"
       content="https://fo-transport13.fr/bulletin-adhesion-simple"
