--- a/confidentialite.html
+++ b/confidentialite.html
@@ -7,6 +7,43 @@
       Confidentialité | FO Transport 13 - Votre syndicat Force Ouvrière dans le
       domaine du transport et de la logistique à Marseille
     </title>
+    <meta
+      name="description"
+      content="Découvrez notre politique de confidentialité pour comprendre comment FO Transport 13 protège vos données personnelles conformément à la réglementation en vigueur."
+    />
+    <meta name="author" content="Webilys" />
+    <meta name="robots" content="index, follow" />
+    <meta
+      property="og:title"
+      content="Confidentialité | FO Transport 13 - Votre syndicat Force Ouvrière dans le domaine du transport et de la logistique à Marseille"
+    />
+    <meta
+      property="og:description"
+      content="Découvrez notre politique de confidentialité pour comprendre comment FO Transport 13 protège vos données personnelles conformément à la réglementation en vigueur."
+    />
+    <meta
+      property="og:image"
+      content="https://fo-transport13.fr/assets/img/hero.webp"
+    />
+    <meta
+      property="og:url"
+      content="https://fo-transport13.fr/confidentialite.html"
+    />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Confidentialité | FO Transport 13 - Votre syndicat Force Ouvrière dans le domaine du transport et de la logistique à Marseille"
+    />
+    <meta
+      name="twitter:description"
+      content="Découvrez notre politique de confidentialité pour comprendre comment FO Transport 13 protège vos données personnelles conformément à la réglementation en vigueur."
+    />
+    <meta name="twitter:image" content="./assets/img/hero.webp" />
+    <link
+      rel="canonical"
+      href="https://fo-transport13.fr/confidentialite.html"
+    />
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
     <link
