--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,45 @@
       FAQ | FO Transport 13 - Votre syndicat Force Ouvrière dans le domaine du
       transport et de la logistique à Marseille
     </title>
+    <meta
+      name="description"
+      content="Trouvez toutes les réponses à vos questions sur FO Transport 13 : adhésion, droits, services, actions syndicales, avantages et plus encore. Contactez-nous si vous ne trouvez pas ce que vous cherchez !"
+    />
+    <meta
+      name="keywords"
+      content="FO Transport 13, FAQ, adhésion syndicale, droits des travailleurs, transport, logistique, Force Ouvrière, questions fréquentes, syndicat Marseille"
+    />
+    <meta name="author" content="FO Transport 13" />
+
+    <!-- Open Graph Metadata -->
+    <meta
+      property="og:title"
+      content="FAQ | FO Transport 13 - Votre syndicat dans le transport et la logistique à Marseille"
+    />
+    <meta
+      property="og:description"
+      content="Obtenez des réponses claires et précises à vos questions fréquentes sur votre adhésion, vos droits, et les services proposés par FO Transport 13. Contactez-nous pour plus d'informations !"
+    />
+    <meta property="og:image" content="https://fo-transport13.fr/assets/img/hero.webp" />
+
+    <meta property="og:url" content="https://www.fo-transport13.fr/faq.html" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Metadata -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="FAQ | FO Transport 13 - Syndicat de transport et logistique à Marseille"
+    />
+    <meta
+      name="twitter:description"
+      content="Retrouvez toutes les réponses aux questions fréquentes concernant FO Transport 13. Votre syndicat pour défendre vos droits dans le secteur du transport et de la logistique."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.fo-transport13.fr/assets/img/hero.webp"
+    />
+
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
     <link
