--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
       property="og:description"
       content="Rejoignez FO Transport 13 pour défendre vos droits en tant que travailleur du transport et de la logistique. Adhérez dès aujourd'hui pour un accompagnement personnalisé."
     />
-    <meta property="og:image" content="./assets/img/hero.webp" />
+    <meta
+      property="og:image"
+      content="https://fo-transport13.fr/assets/img/hero.webp"
+    />
     <meta property="og:url" content="https://fo-transport13.fr" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_FR" />
