--- a/bulletin-adhesion-juridique.html
+++ b/bulletin-adhesion-juridique.html
@@ -28,7 +28,10 @@
       property="og:description"
       content="Adhérez dès aujourd'hui avec FO Transport 13 et accédez à un accompagnement juridique personnalisé pour défendre vos droits dans le secteur du transport et de la logistique."
     />
-    <meta property="og:image" content="./assets/img/hero.webp" />
+    <meta
+      property="og:image"
+      content="https://fo-transport13.fr/assets/img/hero.webp"
+    />
     <meta
       property="og:url"
       content="https://fo-transport13.fr/bulletin-adhesion-juridique"
