--- a/cgu.html
+++ b/cgu.html
@@ -7,6 +7,44 @@
       CGU | FO Transport 13 - Votre syndicat Force Ouvrière dans le domaine du
       transport et de la logistique à Marseille
     </title>
+    <meta
+      name="description"
+      content="Découvrez les Conditions Générales d'Utilisation (CGU) du site FO Transport 13, votre syndicat Force Ouvrière dédié aux travailleurs du transport et de la logistique à Marseille."
+    />
+    <meta
+      name="keywords"
+      content="CGU, Conditions Générales d'Utilisation, FO Transport 13, syndicat transport, syndicat logistique, Marseille, Force Ouvrière"
+    />
+    <meta name="author" content="Webilys" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://www.fo-transport-13.com/cgu.html" />
+    <meta
+      property="og:title"
+      content="CGU | FO Transport 13 - Votre syndicat Force Ouvrière dans le domaine du transport à Marseille"
+    />
+    <meta
+      property="og:description"
+      content="Découvrez les Conditions Générales d'Utilisation (CGU) du site FO Transport 13, votre syndicat Force Ouvrière dédié aux travailleurs du transport et de la logistique à Marseille."
+    />
+    <meta
+      property="og:image"
+      content="https://fo-transport13.fr/assets/img/hero.webp"
+    />
+    <meta
+      property="og:url"
+      content="https://www.fo-transport-13.com/cgu.html"
+    />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="CGU | FO Transport 13 - Votre syndicat Force Ouvrière dans le domaine du transport à Marseille"
+    />
+    <meta
+      name="twitter:description"
+      content="Découvrez les Conditions Générales d'Utilisation (CGU) du site FO Transport 13, votre syndicat Force Ouvrière dédié aux travailleurs du transport et de la logistique à Marseille."
+    />
+    <meta name="twitter:image" content="./assets/img/hero.webp" />
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
     <link
