--- a/cgu.html
+++ b/cgu.html
@@ -17,11 +17,7 @@
     />
     <meta name="author" content="Webilys" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://www.fo-transport-13.com/cgu.html" />
-    <meta
-      property="og:title"
-      content="CGU | FO Transport 13 - Votre syndicat Force Ouvrière dans le domaine du transport à Marseille"
-    />
+    <meta property="og:title" content="CGU | FO Transport 13" />
     <meta
       property="og:description"
       content="Découvrez les Conditions Générales d'Utilisation (CGU) du site FO Transport 13, votre syndicat Force Ouvrière dédié aux travailleurs du transport et de la logistique à Marseille."
@@ -36,15 +32,13 @@
     />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="CGU | FO Transport 13 - Votre syndicat Force Ouvrière dans le domaine du transport à Marseille"
-    />
+    <meta name="twitter:title" content="CGU | FO Transport 13" />
     <meta
       name="twitter:description"
       content="Découvrez les Conditions Générales d'Utilisation (CGU) du site FO Transport 13, votre syndicat Force Ouvrière dédié aux travailleurs du transport et de la logistique à Marseille."
     />
     <meta name="twitter:image" content="./assets/img/hero.webp" />
+    <link rel="canonical" href="https://www.fo-transport-13.com/cgu.html" />
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
     <link
