--- a/confidentialite.html
+++ b/confidentialite.html
@@ -13,10 +13,7 @@
     />
     <meta name="author" content="Webilys" />
     <meta name="robots" content="index, follow" />
-    <meta
-      property="og:title"
-      content="Confidentialité | FO Transport 13 - Votre syndicat Force Ouvrière dans le domaine du transport et de la logistique à Marseille"
-    />
+    <meta property="og:title" content="Confidentialité | FO Transport 13" />
     <meta
       property="og:description"
       content="Découvrez notre politique de confidentialité pour comprendre comment FO Transport 13 protège vos données personnelles conformément à la réglementation en vigueur."
@@ -31,15 +28,15 @@
     />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Confidentialité | FO Transport 13 - Votre syndicat Force Ouvrière dans le domaine du transport et de la logistique à Marseille"
-    />
+    <meta name="twitter:title" content="Confidentialité | FO Transport 13" />
     <meta
       name="twitter:description"
       content="Découvrez notre politique de confidentialité pour comprendre comment FO Transport 13 protège vos données personnelles conformément à la réglementation en vigueur."
     />
-    <meta name="twitter:image" content="./assets/img/hero.webp" />
+    <meta
+      name="twitter:image"
+      content="https://fo-transport13.fr/assets/img/hero.webp"
+    />
     <link
       rel="canonical"
       href="https://fo-transport13.fr/confidentialite.html"
