--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@
     <meta property="og:url" content="https://fo-transport13.fr" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_FR" />
-
-    <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="FO Transport 13 - Syndicat Force Ouvrière du Transport à Marseille"
+      content="FO Transport 13 - Syndicat Force Ouvrière du Transport et de la logistique à Marseille"
     />
     <meta
       name="twitter:description"
@@ -50,8 +48,6 @@
       name="twitter:image"
       content="https://fo-transport13.fr/assets/img/hero.webp"
     />
-
-    <!-- Additional Metadata -->
     <link rel="canonical" href="https://fo-transport13.fr" />
 
     <link rel="stylesheet" href="./assets/css/index.css" />
