--- a/je-souhaite-adherer.html
+++ b/je-souhaite-adherer.html
@@ -7,6 +7,55 @@
       Je souhaite adhérer | FO Transport 13 - Votre syndicat Force Ouvrière dans
       le domaine du transport et de la logistique à Marseille
     </title>
+    <meta
+      name="description"
+      content="Rejoignez FO Transport 13, le syndicat engagé dans la défense des droits des travailleurs du transport et de la logistique à Marseille. Découvrez nos formules d'adhésion et profitez de nos services."
+    />
+    <meta
+      name="keywords"
+      content="adhésion FO Transport 13, syndicat transport, adhésion juridique transport, défense des droits, syndicat logistique Marseille"
+    />
+    <meta name="author" content="Webilys" />
+
+    <!-- SEO et partages sociaux -->
+    <meta property="og:title" content="Je souhaite adhérer | FO Transport 13" />
+    <meta
+      property="og:description"
+      content="Rejoignez FO Transport 13 pour défendre vos droits et bénéficier de nos services. Adhérez dès aujourd'hui à notre syndicat pour un avenir plus juste dans le secteur du transport et de la logistique."
+    />
+    <meta
+      property="og:image"
+      content="https://www.fo-transport13.fr/assets/img/hero.webp"
+    />
+    <meta
+      property="og:url"
+      content="https://www.fo-transport13.fr/je-souhaite-adherer.html"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="FO Transport 13" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Je souhaite adhérer | FO Transport 13"
+    />
+    <meta
+      name="twitter:description"
+      content="Adhérez à FO Transport 13 pour défendre vos droits dans le secteur du transport et de la logistique. Découvrez nos formules et rejoignez notre communauté."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.fo-transport13.fr/assets/img/hero.webp"
+    />
+    <meta
+      name="twitter:site"
+      content="https://www.fo-transport13.fr/je-souhaite-adherer.html"
+    />
+    <link
+      rel="canonical"
+      href="https://www.fo-transport13.fr/je-souhaite-adherer.html"
+    />
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
     <link
