--- a/je-suis-elu-e-au-cse.html
+++ b/je-suis-elu-e-au-cse.html
@@ -7,6 +7,50 @@
       Je suis élu(e) au CSE | FO Transport 13 - Votre syndicat Force Ouvrière
       dans le domaine du transport et de la logistique à Marseille
     </title>
+    <meta
+      name="description"
+      content="Ressources et informations pour les élus du CSE dans le secteur du transport et de la logistique. Rejoignez FO Transport 13 pour défendre vos droits et accéder à des services dédiés."
+    />
+    <meta
+      name="keywords"
+      content="CSE transport, FO Transport 13, droits des élus CSE, élus syndicats logistique"
+    />
+    <meta name="author" content="Webilys" />
+    <meta
+      property="og:title"
+      content="Je suis élu(e) au CSE | FO Transport 13"
+    />
+    <meta
+      property="og:description"
+      content="FO Transport 13 accompagne les élus du CSE dans la défense des droits des travailleurs du secteur transport et logistique. Adhérez pour accéder à nos ressources."
+    />
+    <meta
+      property="og:image"
+      content="https://www.fo-transport13.fr/assets/img/hero.webp"
+    />
+    <meta
+      property="og:url"
+      content="https://www.fo-transport13.fr/je-suis-elu-e-au-cse.html"
+    />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Je suis élu(e) au CSE | FO Transport 13"
+    />
+    <meta
+      name="twitter:description"
+      content="Ressources et soutien pour les élus du CSE dans le secteur transport et logistique avec FO Transport 13."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.fo-transport13.fr/assets/img/hero.Webp"
+    />
+    <link
+      rel="canonical"
+      href="https://www.fo-transport13.fr/je-suis-elu-e-au-cse.html"
+    />
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
     <link
