--- a/faq.html
+++ b/faq.html
@@ -15,28 +15,21 @@
       name="keywords"
       content="FO Transport 13, FAQ, adhésion syndicale, droits des travailleurs, transport, logistique, Force Ouvrière, questions fréquentes, syndicat Marseille"
     />
-    <meta name="author" content="FO Transport 13" />
-
-    <!-- Open Graph Metadata -->
-    <meta
-      property="og:title"
-      content="FAQ | FO Transport 13 - Votre syndicat dans le transport et la logistique à Marseille"
-    />
+    <meta name="author" content="Webilys" />
+    <meta property="og:title" content="FAQ | FO Transport 13" />
     <meta
       property="og:description"
       content="Obtenez des réponses claires et précises à vos questions fréquentes sur votre adhésion, vos droits, et les services proposés par FO Transport 13. Contactez-nous pour plus d'informations !"
     />
-    <meta property="og:image" content="https://fo-transport13.fr/assets/img/hero.webp" />
+    <meta
+      property="og:image"
+      content="https://fo-transport13.fr/assets/img/hero.webp"
+    />
 
     <meta property="og:url" content="https://www.fo-transport13.fr/faq.html" />
     <meta property="og:type" content="website" />
-
-    <!-- Twitter Card Metadata -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="FAQ | FO Transport 13 - Syndicat de transport et logistique à Marseille"
-    />
+    <meta name="twitter:title" content="FAQ | FO Transport 13" />
     <meta
       name="twitter:description"
       content="Retrouvez toutes les réponses aux questions fréquentes concernant FO Transport 13. Votre syndicat pour défendre vos droits dans le secteur du transport et de la logistique."
@@ -45,7 +38,7 @@
       name="twitter:image"
       content="https://www.fo-transport13.fr/assets/img/hero.webp"
     />
-
+    <link rel="canonical" href="https://fo-transport13.fr/faq.html" />
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
     <link
