--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               </li>
               <li class="responsive-li"><a href="./faq.html">FAQ</a></li>
 
-              <li><a href="./medias.html">Médias</a></li>
+              <!-- <li><a href="./medias.html">Médias</a></li> -->
               <li><a href="./nous-contacter.html">Nous contacter</a></li>
               <li class="responsive-li button-menu">
                 <a href="./je-souhaite-adherer.html">Adhésion</a>
@@ -259,14 +259,14 @@
             <h2>Outils</h2>
           </div>
         </a>
-        <a href="./medias.html">
+        <!-- <a href="./medias.html">
           <div
             class="item"
             style="background: url(./assets/img/medias.png) center/cover"
           >
             <h2>Médias</h2>
           </div>
-        </a>
+        </a> -->
       </section>
 
       <section class="lettre">
