--- a/je-suis-elu-e-au-cse.html
+++ b/je-suis-elu-e-au-cse.html
@@ -187,7 +187,7 @@
               </li>
               <li class="responsive-li"><a href="./faq.html">FAQ</a></li>
 
-              <li><a href="./medias.html">Médias</a></li>
+              <!-- <li><a href="./medias.html">Médias</a></li> -->
               <li><a href="./nous-contacter.html">Nous contacter</a></li>
               <li class="responsive-li button-menu">
                 <a href="./je-souhaite-adherer.html">Adhésion</a>
